@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 202X-XX-XX  Release 7.XX.X                                     ---
 ----------------------------------------------------------------------
 
+* added Utah RLE image reading and writing to libicv - Cliff Yapp
 * added "standardize" option to GED attr command - Cliff Yapp
 * added -L option to dbconcat for lazy prefix/suffix use - Cliff Yapp
 
